--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.16.4",
     "nodemon": "^1.19.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
