--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^5.0.0",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
   }
