--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^1.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "styled-components": "^4.3.1"
   },
   "devDependencies": {
