--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/index.js",
-    "build": "webpack --watch --mode development"
+    "build": "webpack --watch --config ./webpack.config.js --mode development",
+    "dev-server": "webpack-dev-server --open --hot"
   },
   "author": "Ginger Barham",
   "license": "ISC",
@@ -16,7 +17,6 @@
     "express": "^4.16.4",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
-    "nodemon": "^1.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
@@ -32,8 +32,11 @@
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^5.0.0",
+    "nodemon": "^1.19.4",
+    "react-hot-loader": "^4.12.19",
     "style-loader": "^0.23.1",
     "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.10.1"
   }
 }
