--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/index.js",
-    "build": "webpack --watch --config ./webpack.config.js --mode development",
-    "dev-server": "webpack-dev-server --open --hot"
+    "build": "webpack --watch --config ./webpack.config.js --mode development"
   },
   "author": "Ginger Barham",
   "license": "ISC",
