--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^5.0.0",
+    "moment": "^2.24.0",
     "nodemon": "^1.19.4",
     "react-hot-loader": "^4.12.19",
     "style-loader": "^0.23.1",
