--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/index.js",
-    "build": "webpack --watch --config ./webpack.config.js --mode development"
+    "build": "webpack --watch --config ./webpack.config.js --mode development",
+    "seed": "node db/seed.js"
   },
   "author": "Ginger Barham",
   "license": "ISC",
